--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
         "windshaft": "git+https://github.com/azavea/Windshaft#master",
         "underscore": "~1.3"
     },
+    "devDependencies": {
+        "mocha": "~1.2.1"
+    },
+    "scripts": {
+        "test": "mocha test/*.js"
+    },
     "licenses": [{
         "type": "BSD",
         "url": "https://github.com/Vizzuality/Windshaft/blob/master/LICENCE"
