--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "dependencies": {
         "windshaft": "git+https://github.com/azavea/Windshaft#master",
-        "underscore": "~1.3"
+        "underscore": "~1.3",
         "semver": "~1.1.0"
     },
     "devDependencies": {
