Rename tiler.js -> server.js
It is a node convention to name the main entry point of a server server.js or
index.js.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "mocha": "~1.2.1"
     },
+    "main": "./server.js",
     "scripts": {
         "test": "mocha test/*.js"
     },
