--- a/config.json
+++ b/config.json
@@ -1,6 +1,9 @@
 {
     "filterQueryArgumentName": "q",
-    "selectAllFieldsSql": "SELECT * FROM treemap_plot LEFT JOIN treemap_tree ON treemap_plot.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id",
+    "selectAllFieldsSql": {
+        "plot": "SELECT * FROM treemap_plot LEFT JOIN treemap_tree ON treemap_plot.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id",
+        "tree": "SELECT * FROM treemap_plot JOIN treemap_tree ON treemap_plot.id = treemap_tree.plot_id JOIN treemap_species ON treemap_tree.species_id = treemap_species.id"
+    },
     "customDbFieldNames": {
         "geom": "the_geom_webmercator"
     }
