Move MODEL_MAPPING to the config
In an effort to move table-level SQL details to the config so that the
only SQL details in the source code are predicate level.

--- a/config.json
+++ b/config.json
@@ -18,5 +18,10 @@
     "customDbFieldNames": {
         "geom": "the_geom_webmercator"
     },
-    "interactivityForUtfGridRequests": "species_id,the_plot_id"
+    "interactivityForUtfGridRequests": "species_id,the_plot_id",
+    "modelMapping": {
+        "plot": "treemap_plot",
+        "tree": "treemap_tree",
+        "species": "treemap_species"
+    }
 }
