Add specificity to boundarySql config string
So that another boundarySql field can be added to the config without
ambiguity.

--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
             "instance" : "treemap_plot.instance_id = <%= instanceid %>"
         }
     },
-    "boundarySql": "(SELECT the_geom_webmercator FROM treemap_boundary JOIN treemap_instance_boundaries ON treemap_instance_boundaries.boundary_id = treemap_boundary.id WHERE treemap_instance_boundaries.instance_id=<%= instanceid %>) otmfiltersql",
+    "boundaryGrainstoreSql": "(SELECT the_geom_webmercator FROM treemap_boundary JOIN treemap_instance_boundaries ON treemap_instance_boundaries.boundary_id = treemap_boundary.id WHERE treemap_instance_boundaries.instance_id=<%= instanceid %>) otmfiltersql",
     "customDbFieldNames": {
         "geom": "the_geom_webmercator"
     },
