Add support for filtering on udfs
Filtering on string udfs is now support using the following syntax:

```
{'plot.udf:Nickname': ...}
```

The main goal is to intercept udf field names and transform:

```
plot.udf:Nickname -> "treemap_plot"."udf_scalar_values"->'Nickname'
```

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "filterQueryArgumentName": "q",
+    "scalar_udf_field": "udf_scalar_values",
     "sqlForPlots": {
         "fields": {
             "base": "the_geom_webmercator",
