Plot is now a subclass of MapFeature
In preparation for supporting other types of map features:
* Update tiler SQL to be MapFeature-centric rather than Plot-centric
* Update "plot" to "mapFeature" in variable/function names

But don't change the app/tiler interface yet, to keep things simpler until we actually support new feature types.

--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
     "filterQueryArgumentName": "q",
     "scalar_udf_field": "udf_scalar_values",
-    "sqlForPlots": {
+    "sqlForMapFeatures": {
         "fields": {
             "base": "the_geom_webmercator",
-            "utfGrid": "the_geom_webmercator, species_id, treemap_plot.id AS the_plot_id"
+            "utfGrid": "the_geom_webmercator, species_id, treemap_mapfeature.id AS the_plot_id"
             },
         "tables": {
-            "base": "treemap_plot",
-            "plot": "treemap_plot LEFT JOIN treemap_tree ON treemap_plot.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id",
-            "tree": "treemap_plot      JOIN treemap_tree ON treemap_plot.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id"
+            "base": "treemap_mapfeature",
+            "plot": "treemap_mapfeature LEFT JOIN treemap_tree ON treemap_mapfeature.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id",
+            "tree": "treemap_mapfeature      JOIN treemap_tree ON treemap_mapfeature.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id"
             },
         "where": {
-            "instance" : "treemap_plot.instance_id = <%= instanceid %>"
+            "instance" : "treemap_mapfeature.instance_id = <%= instanceid %>"
         }
     },
     "boundaryGrainstoreSql": "(SELECT the_geom_webmercator FROM treemap_boundary JOIN treemap_instance_boundaries ON treemap_instance_boundaries.boundary_id = treemap_boundary.id WHERE treemap_instance_boundaries.instance_id=<%= instanceid %>) otmfiltersql",
@@ -22,7 +22,7 @@
     },
     "interactivityForUtfGridRequests": "species_id,the_plot_id",
     "modelMapping": {
-        "plot": "treemap_plot",
+        "plot": "treemap_mapfeature",
         "tree": "treemap_tree",
         "species": "treemap_species"
     }
