--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "scalar_udf_field": "udf_scalar_values",
     "sqlForMapFeatures": {
         "fields": {
-            "base": "the_geom_webmercator",
-            "utfGrid": "the_geom_webmercator, treemap_mapfeature.id AS id"
+            "base": "the_geom_webmercator, feature_type",
+            "utfGrid": "the_geom_webmercator, feature_type, treemap_mapfeature.id AS id"
         },
         "tables": {
             "base": "treemap_mapfeature",
