Use the same join regardless of whether tree is in the filter or not.
Since we have added filters for tree.id IS NULL, we need to LEFT JOIN
when filtering for trees, which makes having a separate select pointless.

I've left filterStringToTables.js in place, since I expect to need
separate SELECT statements depending on the filter in an upcoming PR

--- a/config.json
+++ b/config.json
@@ -8,8 +8,7 @@
         },
         "tables": {
             "base": "treemap_mapfeature",
-            "mapfeature": "treemap_mapfeature LEFT JOIN treemap_tree ON treemap_mapfeature.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id",
-            "tree": "treemap_mapfeature      JOIN treemap_tree ON treemap_mapfeature.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id"
+            "mapfeature": "treemap_mapfeature LEFT JOIN treemap_tree ON treemap_mapfeature.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id"
         },
         "where": {
             "instance" : "treemap_mapfeature.instance_id = <%= instanceid %>"
