Add support for filtering on tree photos
 - Moves JSON parsing from filterStringToWhere up into makeSql
 - Changes SQL generation to only JOIN to tables needed for filter
 - Gets rid of special-case base SQL for UTF Grid requests
 - Note: we do not need to do a DISTINCT ON (treemap_mapfeature.id), even
   though JOINing to photo means we may have more than one row per mapfeature,
   since we also do DISTINCT ON (the_geom_webwercator), which should eliminate
   duplicate mapfeatures

--- a/config.json
+++ b/config.json
@@ -6,9 +6,24 @@
             "base": "feature_type",
             "utfGrid": "feature_type, treemap_mapfeature.id AS id"
         },
+        "baseTable": "mapfeature",
         "tables": {
-            "base": "treemap_mapfeature",
-            "mapfeature": "treemap_mapfeature LEFT JOIN treemap_tree ON treemap_mapfeature.id = treemap_tree.plot_id LEFT JOIN treemap_species ON treemap_tree.species_id = treemap_species.id"
+            "mapfeature": {
+                "depends": [],
+                "sql": "treemap_mapfeature"
+            },
+            "tree": {
+                "depends": ["mapfeature"],
+                "sql": "LEFT OUTER JOIN treemap_tree ON treemap_mapfeature.id = treemap_tree.plot_id"
+            },
+            "species": {
+                "depends": ["mapfeature", "tree"],
+                "sql": "LEFT OUTER JOIN treemap_species ON treemap_tree.species_id = treemap_species.id"
+            },
+            "treephoto": {
+                "depends": ["mapfeature", "tree"],
+                "sql": "LEFT OUTER JOIN treemap_treephoto ON treemap_tree.id = treemap_treephoto.tree_id"
+            }
         },
         "where": {
             "instance" : "treemap_mapfeature.instance_id = <%= instanceid %>"
@@ -23,6 +38,7 @@
     "modelMapping": {
         "mapfeature": "treemap_mapfeature",
         "tree": "treemap_tree",
-        "species": "treemap_species"
+        "species": "treemap_species",
+        "treephoto": "treemap_treephoto"
     }
 }
