--- a/config.json
+++ b/config.json
@@ -24,6 +24,14 @@
             "treePhoto": {
                 "depends": ["mapFeature", "tree"],
                 "sql": "LEFT OUTER JOIN treemap_treephoto ON treemap_tree.id = treemap_treephoto.tree_id"
+            },
+            "udf:tree": {
+                "depends": ["mapFeature", "tree"],
+                "sqlTemplate": "LEFT OUTER JOIN treemap_userdefinedcollectionvalue ON (treemap_tree.id = treemap_userdefinedcollectionvalue.model_id AND treemap_userdefinedcollectionvalue.field_definition_id = <%= udfFieldDefId %>)"
+            },
+            "udf:mapFeature": {
+                "depends": ["mapFeature"],
+                "sqlTemplate": "LEFT OUTER JOIN treemap_userdefinedcollectionvalue ON (treemap_mapfeature.id = treemap_userdefinedcollectionvalue.model_id AND treemap_userdefinedcollectionvalue.field_definition_id = <%= udfFieldDefId %>)"
             }
         },
         "where": {
@@ -41,6 +49,8 @@
         "mapFeature": "treemap_mapfeature",
         "tree": "treemap_tree",
         "species": "treemap_species",
-        "treePhoto": "treemap_treephoto"
+        "treePhoto": "treemap_treephoto",
+        "udf:tree": "treemap_userdefinedcollectionvalue",
+        "udf:mapFeature": "treemap_userdefinedcollectionvalue"
     }
 }
