--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "url": "https://github.com/azavea/OTM2-tiler"
     },
     "dependencies": {
-        "windshaft": "git+https://github.com/azavea/Windshaft#5d69613d",
+        "windshaft": "0.13.7",
         "underscore": "~1.3",
         "semver": "~1.1.0",
         "moment": "~2.1.0"
