Change mapFeature->plot in udfc query syntax
This was primarily done to make the django portions, client and server, more flexible. UDFCs are handled generically on the tiler, but the side sending the request is specific to plot, so it makes sense to send the query as "udf:plot" instead of "udf:mapFeature". If we start adding support for UDFCs on other mapFeatures, we need only add another rule to this config.

--- a/config.json
+++ b/config.json
@@ -29,7 +29,7 @@
                 "depends": ["mapFeature", "tree"],
                 "sqlTemplate": "LEFT OUTER JOIN treemap_userdefinedcollectionvalue ON (treemap_tree.id = treemap_userdefinedcollectionvalue.model_id AND treemap_userdefinedcollectionvalue.field_definition_id = <%= udfFieldDefId %>)"
             },
-            "udf:mapFeature": {
+            "udf:plot": {
                 "depends": ["mapFeature"],
                 "sqlTemplate": "LEFT OUTER JOIN treemap_userdefinedcollectionvalue ON (treemap_mapfeature.id = treemap_userdefinedcollectionvalue.model_id AND treemap_userdefinedcollectionvalue.field_definition_id = <%= udfFieldDefId %>)"
             }
@@ -51,6 +51,6 @@
         "species": "treemap_species",
         "treePhoto": "treemap_treephoto",
         "udf:tree": "treemap_userdefinedcollectionvalue",
-        "udf:mapFeature": "treemap_userdefinedcollectionvalue"
+        "udf:plot": "treemap_userdefinedcollectionvalue"
     }
 }
