Support polygonal map features
A polygonal map feature has both
* a row in the `stormwater_polygonalmapfeature` table (with a polygon), and
* a row in the `treemap_mapfeature` table (with a point)

Polygonal map features are rendered separately from point map features becuase a tile request can only show one geometry column. They are distinguished by passing `stormwater_polygonalmapfeature` as the `table` segment of the tile URL.

We still use `treemap_mapfeature` as the primary table of the SQL query, joining to `stormwater_polygonalmapfeature` to get its geometry. For example:

```sql
SELECT stormwater_polygonalmapfeature.polygon AS the_geom_webmercator, feature_type
    FROM treemap_mapfeature
    INNER JOIN stormwater_polygonalmapfeature ON stormwater_polygonalmapfeature.mapfeature_ptr_id =
    treemap_mapfeature.id
    WHERE treemap_mapfeature.instance_id = 39
```

Currently a polygonal map feature is rendered as both a polygon and a point (i.e. in both `polygonalmapfeature` and `mapfeature` tiles). That will be fixed in a future PR.

Connects #60

--- a/config.json
+++ b/config.json
@@ -4,15 +4,23 @@
     "scalar_udf_field": "udfs",
     "sqlForMapFeatures": {
         "fields": {
-            "geom": "the_geom_webmercator",
+            "geom": {
+                "point": "the_geom_webmercator",
+                "polygon": "stormwater_polygonalmapfeature.polygon"
+            },
             "base": "feature_type",
             "utfGrid": "feature_type, treemap_mapfeature.id AS id"
         },
-        "baseTable": "mapFeature",
+        "basePointModel": "mapFeature",
+        "basePolygonModel": "polygonalMapFeature",
         "tables": {
             "mapFeature": {
                 "depends": [],
                 "sql": "treemap_mapfeature"
+            },
+            "polygonalMapFeature": {
+                "depends": ["mapFeature"],
+                "sql": "INNER JOIN stormwater_polygonalmapfeature ON stormwater_polygonalmapfeature.mapfeature_ptr_id = treemap_mapfeature.id"
             },
             "tree": {
                 "depends": ["mapFeature"],
@@ -52,6 +60,7 @@
     "interactivityForUtfGridRequests": "id",
     "modelMapping": {
         "mapFeature": "treemap_mapfeature",
+        "polygonalMapFeature": "stormwater_polygonalmapfeature",
         "tree": "treemap_tree",
         "species": "treemap_species",
         "mapFeaturePhoto": "treemap_mapfeaturephoto",
