--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "coveralls": "^2.11.2",
     "docco": "~0.6.2",
     "istanbul": "^0.3.2",
+    "jshint": "^2.8.0",
     "mocha": "~1.2.1",
     "supervisor": "^0.6.0"
   },
@@ -23,7 +24,8 @@
   "scripts": {
     "test": "_mocha test/*.js",
     "coverage": "istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- test/*.js",
-    "watch": "supervisor --watch .,style --extensions js,mss server.js"
+    "watch": "supervisor --watch .,style --extensions js,mss server.js",
+    "lint": "jshint *.js test/*.js"
   },
   "licenses": [
     {
