--- a/config.json
+++ b/config.json
@@ -45,6 +45,10 @@
             "udf:plot": {
                 "depends": ["mapFeature", "udf"],
                 "sql": ""
+            },
+            "udf:bioswale": {
+                "depends": ["mapFeature", "udf"],
+                "sql": ""
             }
         },
         "where": {
@@ -65,11 +69,13 @@
         "species": "treemap_species",
         "mapFeaturePhoto": "treemap_mapfeaturephoto",
         "udf:tree": "treemap_userdefinedcollectionvalue",
-        "udf:plot": "treemap_userdefinedcollectionvalue"
+        "udf:plot": "treemap_userdefinedcollectionvalue",
+        "udf:bioswale": "treemap_userdefinedcollectionvalue"
     },
     "udfcTemplates": {
         "udf:tree": "treemap_userdefinedcollectionvalue.field_definition_id=<%= fieldDefId %> AND treemap_userdefinedcollectionvalue.model_id=treemap_tree.id",
-        "udf:plot": "treemap_userdefinedcollectionvalue.field_definition_id=<%= fieldDefId %> AND treemap_userdefinedcollectionvalue.model_id=treemap_mapfeature.id"
+        "udf:plot": "treemap_userdefinedcollectionvalue.field_definition_id=<%= fieldDefId %> AND treemap_userdefinedcollectionvalue.model_id=treemap_mapfeature.id",
+        "udf:bioswale": "treemap_userdefinedcollectionvalue.field_definition_id=<%= fieldDefId %> AND treemap_userdefinedcollectionvalue.model_id=treemap_mapfeature.id"
     },
     "treeMarkerMaxWidth": 20
 }
