--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
-  - "0.10"
+  - '0.10'
+
+env:
+  global:
+    secure: ik/JY6nr4qCza3wKROQy/cCiP82r6tsMyPwJP2v1AbyfplVM25EQ6WCRuJOKM5zmciewoVm6YWTz7ficoX+Fgs8CKnHVL/uRhQFr1HjbuVviL8kHqwKtxB64Rh40Tf0Wzu7Vdn27SKAOGMR2q24LIU95X4C+avbtUbpe+b72UA0=
 
 before_install:
   - sudo add-apt-repository -y ppa:mapnik/v2.2.0
@@ -10,4 +14,6 @@ before_install:
 install: make all
 script: make lint coverage
 
-after_success: cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+after_success:
+  - cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && make docs && bash deploy-docs.sh
