--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "moment": "~2.1.0",
+    "rollbar": "^0.5.9",
     "semver": "~1.1.0",
     "underscore": "~1.3",
     "windshaft": "0.19.4"
