--- a/package.json
+++ b/package.json
@@ -1,37 +1,29 @@
 {
-  "name": "otm2-tiler",
-  "version": "0.0.1-SNAPSHOT",
+  "name": "otm-tiler",
+  "version": "1.0.0",
   "description": "Wraps Windshaft to provide map tiles for OpenTreeMap 2",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/azavea/OTM2-tiler"
-  },
-  "dependencies": {
-    "moment": "~2.1.0",
-    "rollbar": "^0.6.2",
-    "semver": "~1.1.0",
-    "underscore": "~1.3",
-    "windshaft": "0.19.4"
-  },
-  "devDependencies": {
-    "coveralls": "^2.11.2",
-    "docco": "~0.6.2",
-    "istanbul": "^0.3.2",
-    "jshint": "^2.8.0",
-    "mocha": "~1.2.1",
-    "supervisor": "^0.6.0"
-  },
-  "main": "./server.js",
+  "main": "server.js",
+  "repository": "git@github.com:OpenTreeMap/otm-tiler.git",
+  "license": "AGPL-3.0",
   "scripts": {
     "test": "_mocha test/*.js",
     "coverage": "istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- test/*.js",
-    "watch": "supervisor --watch .,style --extensions js,mss server.js",
+    "watch": "supervisor --inspect --watch .,style --extensions js,mms server.js",
     "lint": "jshint *.js test/*.js"
   },
-  "licenses": [
-    {
-      "type": "BSD",
-      "url": "https://github.com/Vizzuality/Windshaft/blob/master/LICENCE"
-    }
-  ]
+  "devDependencies": {
+    "coveralls": "^2.13.1",
+    "docco": "^0.7.0",
+    "istanbul": "^0.4.5",
+    "jshint": "^2.9.5",
+    "mocha": "^3.5.2",
+    "supervisor": "^0.12.0"
+  },
+  "dependencies": {
+    "express": "3.21.2",
+    "moment": "2.1.0",
+    "rollbar": "^2.2.7",
+    "underscore": "^1.8.3",
+    "windshaft": "^3.3.1"
+  }
 }
