Add trigger for otm-cluster on changes to otm-tiler

--- a/.github/workflows/ci-otm-tiler.yml
+++ b/.github/workflows/ci-otm-tiler.yml
@@ -24,7 +24,7 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git commit -a -m "Trigger tiler build"
 
-      - name: Push changes
+      - name: Push changes to otm-cluster
         uses: ad-m/github-push-action@master
         with:
           force_with_lease: true
