Add trigger for otm-cluster on changes to otm-tiler

--- a/.github/workflows/ci-otm-tiler.yml
+++ b/.github/workflows/ci-otm-tiler.yml
@@ -1,9 +1,7 @@
 name: CI for OTM tiler build
 
-on:
-  push:
-    paths:
-      - /**
+on: push
+
 jobs:
   ci:
     name: Trigger otm-cluster build
