Add trigger for otm-cluster on changes to otm-tiler

--- a/.github/workflows/ci-otm-tiler.yml
+++ b/.github/workflows/ci-otm-tiler.yml
@@ -19,6 +19,6 @@ jobs:
 
       - name: Commit an push files
         run: |
-          cd src
+          cd src/otm-cluster
           git commit -a -m "Trigger tiler build"
           git push
