Add trigger for otm-cluster on changes to otm-tiler

--- a/.github/workflows/ci-otm-tiler.yml
+++ b/.github/workflows/ci-otm-tiler.yml
@@ -21,4 +21,8 @@ jobs:
         run: |
           cd src/otm-cluster
           git commit -a -m "Trigger tiler build"
-          git push
+
+      - name: Push changes to otm-cluster
+        uses: ad-m/github-push-action@master
+        with:
+          force_with_lease: true
